--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,8 +17,12 @@ URL: https://github.com/frbcesab/eumammals
 BugReports: https://github.com/frbcesab/eumammals/issues
 License: GPL (>= 2)
 Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+SystemRequirements: 
+    C++11,
+    GDAL (>= 2.0.1),
+    GEOS (>= 3.4.0),
+    PROJ (>= 4.8.0),
+    sqlite3
 Imports: 
     devtools,
     here,
@@ -32,3 +36,5 @@ Imports:
     terra
 Remotes:
     ropensci/rnaturalearthhires
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.1.2
